# hiero-json-rpc-relay

./: .c8rc.json  .dockerignore  .env.http.example  .env.ws.example  .eslintrc.js  .gitignore  .mocharc.js  CLAUDE.md  Dockerfile  Dockerfile.alpine  Dockerfile.prev  Heap.20260318.163427.11.2.003.heapprofile  MAINTAINERS.md  Makefile  README.md  code-diet-report.md  codecov.yml  compact-history.md  docker-compose.yml  docker-optimization-report.md  draft-analysis.md  ecosystem.config.js  eslint.config.ci.mjs  eslint.config.mjs  experiment-log.md  findings-v2.md  findings-v3-underload.md  findings-v4-underload-analysis.md  gc-trace-findings.md  heap-dump-guidelines.md  issue-4900.md  issue-4986.md  issue-5077.md  k6-test-result.md  load-test.ts  master-plan.md  memory-allocation-analysis.md  package-lock.json  package.json  performance_test_goal.md  (+18 more)
.github/: CODEOWNERS  dependabot.yml  falcon.yml  mirror-node-values.yaml  network-versions.env  snyk_pull_request_template.yaml
.husky/: commit-msg
charts/: hedera-json-rpc-0.67.0-rc1.tgz  hedera-json-rpc-0.67.0-rc2.tgz  hedera-json-rpc-0.67.0-rc3.tgz  hedera-json-rpc-0.67.0.tgz  hedera-json-rpc-0.67.1-rc1.tgz  hedera-json-rpc-0.68.0-rc1.tgz  hedera-json-rpc-0.68.0.tgz  hedera-json-rpc-0.69.0-rc1.tgz  hedera-json-rpc-0.69.0.tgz  hedera-json-rpc-0.69.1.tgz  hedera-json-rpc-0.69.2.tgz  hedera-json-rpc-0.69.3.tgz  hedera-json-rpc-0.70.0-rc1.tgz  hedera-json-rpc-0.70.0.tgz  hedera-json-rpc-0.70.1.tgz  hedera-json-rpc-0.71.0-rc1.tgz  hedera-json-rpc-0.71.0.tgz  hedera-json-rpc-0.71.1.tgz  (+121 more)
tools/ethers-rs-example/: Cargo.toml
(+721 files in other folders)
